[tool.poetry]
name = "mk-orange-dhcp-auth"
version = "0.1.0"
description = ""
authors = ["Remi Paulmier"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
